Refactor module-info.java: Add javafx.swing requirement